# codeplane

./: .cplignore  .dockerignore  .env.sample  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  CodePlane_Unified_Spec_PreAPI.md  Makefile  README.md  ROADMAP.md  SCREENSHOTS_NEEDED.md  SPEC.md  _bench_embed.py  _bench_hybrid.py  _bench_recon.py  _bench_scaffold.py  _bench_scaffold_vs_full.py  _bench_signals.py  _bench_signals_v2.py  _spot_check.py  alembic.ini  benchmarkingexperiment.md  code_plane_mcp_task_model_and_convergence_controls.md  codecov.yml  codeplane.code-workspace  codeplane_concept.md  codeplane_indexing_design.md  codeplane_operability_spec.md  codeplane_refactor_engine_spec.md  codeplane_refactor_engine_spec_multi_context.md  codeplane_repo_reconciliation.md  codeplane_security_posture.md  coverage.json  hatch_build.py  mkdocs.yml  mutation_engine_spec.md  mycompreview.md  pyproject.toml  (+3 more)
.codeplane/: .gitignore  (+1 more)
ranking/: README.md  clone_repos.sh  pyproject.toml  ranking.code-workspace  setup_workspace.sh
ranking/clones/: .gitignore
ranking/data/: gt_state.json
ranking/data/cpp-abseil/ground_truth/: N4.json  N5.json  N6.json  N7.json
ranking/data/cpp-cli11/ground_truth/: N1.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json
ranking/data/cpp-nlohmann-json/ground_truth/: N1.json  N10.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/cpp-simdjson/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/cpp-spdlog/ground_truth/: N1.json  N10.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/csharp-aspnetcore/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/csharp-automapper/: ground_truth.jsonl  non_ok_queries.json
ranking/data/csharp-automapper/opus_4.6_executor/: ground_truth.jsonl
ranking/data/csharp-dapper/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/csharp-fluentvalidation/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/csharp-mediatr/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/csharp-polly/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/go-chi/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/go-cobra/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/go-echo/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/go-mux/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/java-assertj/ground_truth/: N1.json  N2.json  N3.json  N4.json  N5.json
ranking/data/java-guava/ground_truth/: N1.json  N10.json  N11.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/java-jackson/ground_truth/: N1.json  N2.json  N3.json
ranking/data/java-kafka/ground_truth/: N1.json  N10.json  N2.json  N3.json  N4.json  N5.json  N6.json  N7.json  N8.json  N9.json
ranking/data/java-retrofit/ground_truth/: N1.json  N2.json  N3.json
ranking/infra/: 1_fork.py  2_auditor.py  3_executor.py  4_reviewer.py  5_collect.py  6_cleanup.py  Dockerfile  batch_index.py  gt_common.py  gt_orchestrator.py  index_all.sh  main.tf  merge_ground_truth.py
ranking/repos/: python-httpx.md  typescript-mermaid.md  typescript-nestjs.md
ranking/repos/cutoff/: cpp-abseil.md  cpp-cli11.md  cpp-nlohmann-json.md  cpp-simdjson.md  cpp-spdlog.md  csharp-aspnetcore.md  csharp-fluentvalidation.md  csharp-mediatr.md  csharp-polly.md  go-chi.md  go-echo.md  java-assertj.md  java-guava.md  java-kafka.md  java-retrofit.md  php-carbon.md  php-flysystem.md  php-monolog.md  python-click.md  python-flask.md  python-jinja.md  python-markupsafe.md  python-marshmallow.md  python-requests.md  python-rich.md  python-typer.md  ruby-devise.md  ruby-faraday.md  ruby-puma.md  ruby-sidekiq.md  rust-clap.md  rust-crossbeam.md  rust-hyper.md  swift-kingfisher.md  swift-lottie.md  swift-moya.md  typescript-commander.md  typescript-date-fns.md  typescript-fastify.md  typescript-trpc.md
ranking/repos/eval/: cpp-catch2.md  cpp-grpc.md  csharp-automapper.md  csharp-xunit.md  go-fiber.md  go-gin.md  java-lombok.md  java-mockito.md  php-console.md  php-whoops.md  python-celery.md  python-pydantic.md  ruby-grape.md  ruby-sinatra.md  rust-axum.md  rust-diesel.md  swift-composable-architecture.md  swift-rxswift.md  typescript-esbuild.md  typescript-vitest.md
ranking/repos/ranker-gate/: cpp-fmt.md  cpp-googletest.md  cpp-opencv.md  csharp-efcore.md  csharp-humanizer.md  csharp-newtonsoft-json.md  go-bubbletea.md  go-caddy.md  go-gitea.md  java-gson.md  java-okhttp.md  java-spring-boot.md  php-composer.md  php-guzzle.md  php-laravel.md  python-django.md  python-fastapi.md  python-httpx.md  ruby-jekyll.md  ruby-rack.md  ruby-rails.md  rust-ripgrep.md  rust-serde.md  rust-tokio.md  swift-alamofire.md  swift-package-manager.md  swift-vapor.md  typescript-mermaid.md  typescript-nestjs.md  typescript-zod.md
ranking/roles/: auditor.md  eval-executor.md  eval-reviewer.md  executor.md  prompts.md  reviewer.md
ranking/src/cpl_ranking/: __init__.py  collect_signals.py  collector.py  schema.py  train_all.py  train_cutoff.py  train_gate.py  train_ranker.py  validate_ground_truth.py
ranking/tasks/: README.md  cpp-fmt.md  cpp-googletest.md  cpp-opencv.md  php-composer.md  php-guzzle.md  php-laravel.md  ruby-jekyll.md  ruby-rails.md  swift-alamofire.md  swift-package-manager.md  swift-vapor.md
(+895 files in other folders)
