[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeplane"
version = "0.1.0"
description = "Local repository control plane for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # CLI
    "click>=8.3.0",
    # HTTP Server
    "starlette>=0.52.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.0",
    # MCP
    "mcp>=1.9.0",
    "fastmcp>=2.0.0",
    # Config & Validation
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",
    # Index
    "sqlmodel>=0.0.24",
    "tantivy>=0.25.0",
    # Tree-sitter core runtime only - grammars installed dynamically per-repo
    "tree-sitter>=0.24.0",
    # Git
    "pygit2>=1.19.0",
    # Logging
    "structlog>=25.5.0",
    "sqlalchemy[mypy]>=2.0.46",
    # CLI progress & output
    "tqdm>=4.66.0",
    "rich>=14.0.0",
    "questionary>=2.0.0",
    # File watching
    "watchfiles>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
    "testcontainers>=4.10.0",
    "psutil>=5.9.0",
]

[project.scripts]
cpl = "codeplane.cli.main:cli"

[project.urls]
Homepage = "https://github.com/davidfinson/codeplane"
Repository = "https://github.com/davidfinson/codeplane"

[tool.hatch.build.targets.wheel]
packages = ["src/codeplane"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["codeplane"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "tantivy.*",
    "pygit2.*",
    "structlog.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_javascript.*",
    "tree_sitter_typescript.*",
    "tree_sitter_go.*",
    "tree_sitter_rust.*",
    "scip.*",
    "starlette.*",
    "uvicorn.*",
    "watchfiles.*",
    "httpx.*",
    "rich.*",
    "questionary.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
timeout = 600
timeout_method = "signal"
markers = [
    "integration: marks tests requiring external resources (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: marks tests that must run serially (not in parallel)",
]

[tool.coverage.run]
source = ["src/codeplane"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.0.20250809",
]
